--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="color-scheme" content="dark light" />
+		<meta name="robots" content="noindex, nofollow" />
 		<title>ludwigbrida/photon</title>
 	</head>
 	<body>
